ADD: wizard text

--- a/src/org/afraid/poison/db2php/phpClass.html
+++ b/src/org/afraid/poison/db2php/phpClass.html
@@ -7,6 +7,7 @@ and open the template in the editor.
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     </head>
     <body>
-        Generate PHP entity classes from database tables.
+        Generate PHP entity classes from database tables.<br />
+		The generated Classes will have setters/getters for all fields and methods to get/insert/select/delete from the table.
     </body>
 </html>
