--- a/db2phpnb/src/org/afraid/poison/db2php/phpClassUtility.html
+++ b/db2phpnb/src/org/afraid/poison/db2php/phpClassUtility.html
@@ -7,6 +7,8 @@ and open the template in the editor.
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     </head>
     <body>
-        Copy utility Classes used by Entity Classes.
+        Generate PHP entity classes from database tables.<br />
+		The generated Classes will have setters/getters for all fields and methods to get/insert/select/delete from the table.
+		Use settings from descriptor XML file.
     </body>
 </html>
